--- a/refocus.html
+++ b/refocus.html
@@ -4,7 +4,7 @@
     <title>ReFocus</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- 
+
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
     <!--Import animate.css-->
@@ -27,4 +27,17 @@
 <body>
     <h1>ReFocus</h1>
 </body>
+<script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAKiDrcMvQXv_5fzjrzWddKIqcifvUp_ng",
+    authDomain: "refocus-aa483.firebaseapp.com",
+    databaseURL: "https://refocus-aa483.firebaseio.com",
+    projectId: "refocus-aa483",
+    storageBucket: "refocus-aa483.appspot.com",
+    messagingSenderId: "1090353734801"
+  };
+  firebase.initializeApp(config);
+</script>
 </html>
