--- a/refocus.html
+++ b/refocus.html
@@ -23,8 +23,41 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/info.json"></script>
 </head>
 <body>
-    <h1>ReFocus</h1>
+    <div class="container pad-this">
+        <!-- put side nav here -->
+        <div class="col s3 m3">
+            
+        </div>
+        <!-- put a card here -->
+        <div class="row">
+        <div class="col s3 m3">
+                          <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                              <span class="card-title">Card Title</span>
+                              <p>I am a very simple card. I am good at containing small bits of information.
+                              I am convenient because I require little markup to use effectively.</p>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">This is a link</a>
+                              <a href="#">This is a link</a>
+                            </div>
+                          </div>
+        </div>
+        <!-- put a card here -->
+        <div class="col s3 m3">
+
+        </div>
+        <!-- put a card here -->
+        <div class="col s3 m3">
+
+        </div>
+     </div>
+    </div>
+    <script>
+    var data = JSON.parse(info);
+    </script>
 </body>
 </html>
