--- a/refocus.html
+++ b/refocus.html
@@ -1,28 +1,69 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>ReFocus</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ 
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+    <!--Import animate.css-->
     <link type="text/css" rel="stylesheet" href="css/animate.css"  media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--jQuery plugin-->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js">
         sr.reveal('.Reveal', { container: '.Container' });
     </script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
     <script type="text/javascript" src="js/wow.js"></script>
+    <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/info.json"></script>
 </head>
 <body>
-    <h1>ReFocus</h1>
+    <div class="container pad-this">
+        <!-- put side nav here -->
+        <div class="col s3 m3">
+            
+        </div>
+        <!-- put a card here -->
+        <div class="row">
+        <div class="col s3 m3">
+                          <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                              <span class="card-title">Card Title</span>
+                              <p>I am a very simple card. I am good at containing small bits of information.
+                              I am convenient because I require little markup to use effectively.</p>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">This is a link</a>
+                              <a href="#">This is a link</a>
+                            </div>
+                          </div>
+        </div>
+        <!-- put a card here -->
+        <div class="col s3 m3">
+
+        </div>
+        <!-- put a card here -->
+        <div class="col s3 m3">
+
+        </div>
+     </div>
+    </div>
+    <script>
+    var data = JSON.parse(info); 
+    </script>
 </body>
 <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
 <script>
-
+  // Initialize Firebase
   var config = {
     apiKey: "AIzaSyAKiDrcMvQXv_5fzjrzWddKIqcifvUp_ng",
     authDomain: "refocus-aa483.firebaseapp.com",
