added descriptive cards

--- a/refocus.html
+++ b/refocus.html
@@ -5,7 +5,7 @@
     <title>ReFocus</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- 
+
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
     <!--Import animate.css-->
@@ -30,14 +30,14 @@
     <div class="container pad-this">
         <!-- put side nav here -->
         <div class="col s3 m3">
-            
+
         </div>
         <!-- put a card here -->
-        <div class="row">
+      <!--  <div class="row"> -->
         <div class="col s3 m3">
                           <div class="card blue-grey darken-1">
                             <div class="card-content white-text">
-                              <span class="card-title">Card Title</span>
+                              <span class="card-title">Youtube</span>
                               <p>I am a very simple card. I am good at containing small bits of information.
                               I am convenient because I require little markup to use effectively.</p>
                             </div>
@@ -49,16 +49,36 @@
         </div>
         <!-- put a card here -->
         <div class="col s3 m3">
-
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Reddit</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+          </div>
         </div>
         <!-- put a card here -->
         <div class="col s3 m3">
-
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Fornite</span>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+          </div>
         </div>
      </div>
     </div>
     <script>
-    var data = JSON.parse(info); 
+    var data = JSON.parse(info);
     </script>
 </body>
 <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
