--- a/refocus.html
+++ b/refocus.html
@@ -33,11 +33,11 @@
 
         </div>
         <!-- put a card here -->
-      <!--  <div class="row"> -->
-        <div class="col s3 m3">
+        <div class="row">
+        <div class="col s3 m3" id=app>
                           <div class="card blue-grey darken-1">
-                            <div class="card-content white-text">
-                              <span class="card-title">Youtube</span>
+                            <div class="card-content white-text" id="append">
+                              <span class="card-title" v-bind:title="data">Youtube</span>
                               <p>I am a very simple card. I am good at containing small bits of information.
                               I am convenient because I require little markup to use effectively.</p>
                             </div>
@@ -78,9 +78,22 @@
      </div>
     </div>
     <script>
-    var data = JSON.parse(info);
+        var data = JSON.parse(info);
+
+        var refrenceData = firebase.database().ref().child("Programs");
+        var db = {
+            "card":[refrenceData];
+        };
+
+        var app = new Vue({
+            el: '#append',
+            data: {
+                data: db.card,
+            }
+        });
     </script>
 </body>
+
 <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
 <script>
   // Initialize Firebase
@@ -94,4 +107,5 @@
   };
   firebase.initializeApp(config);
 </script>
+
 </html>
