--- a/refocus.html
+++ b/refocus.html
@@ -1,140 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>ReFocus</title>
+
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>if (window.module) module = window.module;</script>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
-    <!--Import animate.css-->
-    <link type="text/css" rel="stylesheet" href="css/animate.css"  media="screen,projection"/>
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!--jQuery plugin-->
-    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js">
-        sr.reveal('.Reveal', { container: '.Container' });
-    </script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
-    <script type="text/javascript" src="js/wow.js"></script>
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/info.json"></script>
-</head>
-<body>
-  <!--  <div class="container pad-this">-->
-      <div class="row">
-        <div class="carousel carousel-slider center">
-  <div class="carousel-fixed-item center">
-    <a class="btn waves-effect white grey-text darken-text-2">button</a>
-  </div>
-  <div class="carousel-item red white-text" href="#one!">
-    <h2>First Panel</h2>
-    <p class="white-text">This is your first panel</p>
-  </div>
-  <div class="carousel-item amber white-text" href="#two!">
-    <h2>Second Panel</h2>
-    <p class="white-text">This is your second panel</p>
-  </div>
-  <div class="carousel-item green white-text" href="#three!">
-    <h2>Third Panel</h2>
-    <p class="white-text">This is your third panel</p>
-  </div>
-  <div class="carousel-item blue white-text" href="#four!">
-    <h2>Fourth Panel</h2>
-    <p class="white-text">This is your fourth panel</p>
-  </div>
-</div>
-        </div>
-<br>
+    <script>
+           $(document).ready(function(){
+      $('.carousel').carousel();
+    });
+    </script>
+  </head>
+  <body>
+      
         <div class="row">
-          <div class="row">
-  <div class="col s12 m12">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
+          <div class= "col s12 m12">
+  <div class="carousel carousel-slider center">
+      <div class="carousel-fixed-item center">
+        <a class="btn waves-effect white grey-text darken-text-2">button</a>
       </div>
-      <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
+      <div class="carousel-item red white-text" href="#one!">
+        <h2>First Panel</h2>
+        <p class="white-text">This is your first panel</p>
+      </div>
+      <div class="carousel-item amber white-text" href="#two!">
+        <h2>Second Panel</h2>
+        <p class="white-text">This is your second panel</p>
+      </div>
+      <div class="carousel-item green white-text" href="#three!">
+        <h2>Third Panel</h2>
+        <p class="white-text">This is your third panel</p>
+      </div>
+      <div class="carousel-item blue white-text" href="#four!">
+        <h2>Fourth Panel</h2>
+        <p class="white-text">This is your fourth panel</p>
       </div>
     </div>
-  </div>
-</div>
-        </div>
-<br>
-        <div class="row">
-
-        <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
           </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-          </div>
-        </footer>
-
         </div>
+        
 
-        <div class="col s10 m10">
-
-</div>
-</div>
-<!--</div>-->
-
-    <script>
-        var data = JSON.parse(info);
-
-        var refrenceData = firebase.database().ref().child("Programs");
-        var db = {
-            "card":[refrenceData];
-        };
-
-        var app = new Vue({
-            el: '#append',
-            data: {
-                data: db.card,
-            }
-        });
-    </script>
-</body>
-
-<script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAKiDrcMvQXv_5fzjrzWddKIqcifvUp_ng",
-    authDomain: "refocus-aa483.firebaseapp.com",
-    databaseURL: "https://refocus-aa483.firebaseio.com",
-    projectId: "refocus-aa483",
-    storageBucket: "refocus-aa483.appspot.com",
-    messagingSenderId: "1090353734801"
-  };
-  firebase.initializeApp(config);
-</script>
-
+  </body>
+  <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAKiDrcMvQXv_5fzjrzWddKIqcifvUp_ng",
+      authDomain: "refocus-aa483.firebaseapp.com",
+      databaseURL: "https://refocus-aa483.firebaseio.com",
+      projectId: "refocus-aa483",
+      storageBucket: "refocus-aa483.appspot.com",
+      messagingSenderId: "1090353734801"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
