--- a/refocus.html
+++ b/refocus.html
@@ -21,34 +21,47 @@
     </script>
   </head>
   <body>
-      
+      <script>
+        var database = firebase.database().ref().child("Programs/");
+
+        var db = {
+            "card":database;
+        }
+
+          var app = new Vue({
+            el: '#app_',
+            data: {
+              datas: {/*db.card*/ 'Reddit'}
+              //num: 6,
+            }
+            });
+      </script>
+
         <div class="row">
           <div class= "col s12 m12">
-  <div class="carousel carousel-slider center">
-      <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2">button</a>
-      </div>
-      <div class="carousel-item red white-text" href="#one!">
-        <h2>First Panel</h2>
-        <p class="white-text">This is your first panel</p>
-      </div>
-      <div class="carousel-item amber white-text" href="#two!">
-        <h2>Second Panel</h2>
-        <p class="white-text">This is your second panel</p>
-      </div>
-      <div class="carousel-item green white-text" href="#three!">
-        <h2>Third Panel</h2>
-        <p class="white-text">This is your third panel</p>
-      </div>
-      <div class="carousel-item blue white-text" href="#four!">
-        <h2>Fourth Panel</h2>
-        <p class="white-text">This is your fourth panel</p>
-      </div>
-
-    </div>
+          <div class="carousel carousel-slider center">
+              <div class="carousel-fixed-item center">
+                <a class="btn waves-effect white grey-text darken-text-2">button</a>
+              </div>
+              <div class="carousel-item red white-text" href="#one!" id="app_">
+                <h2>{{ app.datas }}</h2>
+                <p class="white-text">This is your first panel</p>
+              </div>
+              <<div class="carousel-item amber white-text" href="#two!">
+                <h2></h2>
+                <p class="white-text">This is your second panel</p>
+              </div>
+              <div class="carousel-item green white-text" href="#three!">
+                <h2></h2>
+                <p class="white-text">This is your third panel</p>
+              </div>
+              <div class="carousel-item blue white-text" href="#four!">
+                <h2></h2>
+                <p class="white-text">This is your fourth panel</p>
+              </div>
+            </div>
           </div>
-        </div>
-        
+      </div>
 
   </body>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
