--- a/refocus.html
+++ b/refocus.html
@@ -20,7 +20,7 @@
     });
     </script>
   </head>
-  <body>
+  <body bgcolor="#535551">
       <script>
         var database = firebase.database().ref().child("Programs/");
 
@@ -37,31 +37,22 @@
             });
       </script>
 
-        <div class="row">
-          <div class= "col s12 m12">
-          <div class="carousel carousel-slider center">
-              <div class="carousel-fixed-item center">
-                <a class="btn waves-effect white grey-text darken-text-2">button</a>
-              </div>
+
+          <div class="carousel">
+            <div class="carousel-fixed-item center">
+                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+                </div>
               <div class="carousel-item red white-text" href="#one!" id="app_">
-                <h2>{{ app.datas }}</h2>
+                <h2 id="name">{Program Name}</h2>
                 <p class="white-text">This is your first panel</p>
               </div>
-              <<div class="carousel-item amber white-text" href="#two!">
+              <div class="carousel-item amber white-text" href="#two!">
                 <h2></h2>
                 <p class="white-text">This is your second panel</p>
               </div>
-              <div class="carousel-item green white-text" href="#three!">
-                <h2></h2>
-                <p class="white-text">This is your third panel</p>
-              </div>
-              <div class="carousel-item blue white-text" href="#four!">
-                <h2></h2>
-                <p class="white-text">This is your fourth panel</p>
-              </div>
+
             </div>
-          </div>
-      </div>
+
 
   </body>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
