--- a/refocus.html
+++ b/refocus.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
     <script>
            $(document).ready(function(){
       $('.carousel').carousel();
@@ -21,48 +22,19 @@
     </script>
   </head>
   <body>
-      <script>
-        var database = firebase.database().ref().child("Programs/");
-
-        var db = {
-            "card":database;
-        }
-
-          var app = new Vue({
-            el: '#app_',
-            data: {
-              datas: {/*db.card*/ 'Reddit'}
-              //num: 6,
-            }
-            });
-      </script>
-
+      
+      <div id="app_">
         <div class="row">
           <div class= "col s12 m12">
           <div class="carousel carousel-slider center">
-              <div class="carousel-fixed-item center">
-                <a class="btn waves-effect white grey-text darken-text-2">button</a>
-              </div>
-              <div class="carousel-item red white-text" href="#one!" id="app_">
-                <h2>{{ app.datas }}</h2>
+              <div class="carousel-item red white-text" href="#one!" v-for="item in Programs" v-if="item.name.length > 0">
+                <h2>{{ item.name }}</h2>
                 <p class="white-text">This is your first panel</p>
-              </div>
-              <<div class="carousel-item amber white-text" href="#two!">
-                <h2></h2>
-                <p class="white-text">This is your second panel</p>
-              </div>
-              <div class="carousel-item green white-text" href="#three!">
-                <h2></h2>
-                <p class="white-text">This is your third panel</p>
-              </div>
-              <div class="carousel-item blue white-text" href="#four!">
-                <h2></h2>
-                <p class="white-text">This is your fourth panel</p>
               </div>
             </div>
           </div>
       </div>
-
+    </div>
   </body>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
   <script>
@@ -76,5 +48,41 @@
       messagingSenderId: "1090353734801"
     };
     firebase.initializeApp(config);
+
+    var database = firebase.database().ref().child("Programs/");
+    var db = 
+    {
+
+
+};
+
+      var app = new Vue({
+        el: '#app_',
+        data: {
+          Programs: [
+	{
+    "name": "Reddit",
+		"type": "website",
+		"URL": "www.reddit.com",
+		"DailyHours": "4",
+    "HoursUsed": "0"
+		},
+	{
+    "name": "Youtube",
+    "type": "website",
+    "URL": "www.youtube.com",
+   "DailyHours": "4",
+    "HoursUsed": "0"
+		},
+	{
+    "name": "Fortnite",
+    "type": "program",
+    "path": "C:/Program Files (x86)/Epic Games",
+    "DailyHours": "4",
+    "HoursUsed": "0"
+		}
+  ]
+        }
+      });
   </script>
 </html>
