--- a/refocus.html
+++ b/refocus.html
@@ -6,56 +6,43 @@
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>if (window.module) module = window.module;</script>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/main.css"/>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/materialize.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script>
-           $(document).ready(function(){
-      $('.carousel').carousel();
-    });
-    </script>
+
   </head>
-  <body bgcolor="#535551">
-      <script>
-        var database = firebase.database().ref().child("Programs/");
 
-        var db = {
-            "card":database;
-        }
+  <body>
 
-          var app = new Vue({
-            el: '#app_',
-            data: {
-              datas: {/*db.card*/ 'Reddit'}
-              //num: 6,
-            }
-            });
-      </script>
-
-
-          <div class="carousel">
-            <div class="carousel-fixed-item center">
-                    <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
-                </div>
-              <div class="carousel-item red white-text" href="#one!" id="app_">
-                <h2 id="name">{Program Name}</h2>
-                <p class="white-text">This is your first panel</p>
-              </div>
-              <div class="carousel-item amber white-text" href="#two!">
-                <h2></h2>
-                <p class="white-text">This is your second panel</p>
-              </div>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-1 padd">
+          <a href="#" class="btn btn-sq-sm btn-dark">
+              <i class="fa fa-user fa-2x"></i><br/>
+                Reddit
+            </a>
+        </div>
+        <div class="col-11 padd">
+          <div class="card">
+            <div class="card-header">
+              Featured
             </div>
-
+            <div class="card-body">
+              <h5 class="card-title" id="programname">{Program Name}</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-dark">Change settings</a>
+            </div>
+</div>
+        </div>
+      </div>
+    </div>
 
   </body>
+
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
   <script>
     // Initialize Firebase
