--- a/refocus.html
+++ b/refocus.html
@@ -21,19 +21,22 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-1 padd">
-          <a href="#" class="btn btn-sq-sm btn-dark">
-              <i class="fa fa-user fa-2x"></i><br/>
-                Reddit
-            </a>
+
+          <button type="button" class="btn btn-dark btn-lg">
+            <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
+          </button>
         </div>
         <div class="col-11 padd">
-          <div class="card">
-            <div class="card-header">
-              Featured
-            </div>
-            <div class="card-body">
-              <h5 class="card-title" id="programname">{Program Name}</h5>
+          <div class="card d-flex">
+
+              <h5 class="card-header" id="programname">{Program Name}</h5>
+
+            <div class="card-body flex-fill">
+
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+
+
               <a href="#" class="btn btn-dark">Change settings</a>
             </div>
 </div>
