--- a/refocus.html
+++ b/refocus.html
@@ -27,6 +27,9 @@
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
     <script>
         $(document).ready(function() {
             $('.carousel').carousel();
@@ -102,7 +105,7 @@
                 <div class="modal-footer">
                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
                 </div>
-            
+
             </template>
         </div>
 </body>
