--- a/refocus.html
+++ b/refocus.html
@@ -24,6 +24,7 @@
             <v-carousel dark hide-delimiters>
                 <v-carousel-item v-for="(item,i) in Programs">
                 <h1> {{item.name}} </h1>
+                <h2>{{item.allowance}}</h2>
                 </v-carousel-item>
             </v-carousel>
     
@@ -33,7 +34,7 @@
         <!-- Modal Structure -->
         <v-layout row justify-center>
                 <v-dialog v-model="dialog" persistent max-width="600px">
-                  <v-btn slot="activator"  fab dark color="red" dark> <v-icon dark>add</v-icon></v-btn>
+                  <v-btn slot="activator"  fab dark color="red" dark > <v-icon dark>add</v-icon></v-btn>
                   <v-card>
                     <v-card-title>
                       <span class="headline">ReFocus yourself</span>
@@ -60,7 +61,7 @@
                     <v-card-actions>
                       <v-spacer></v-spacer>
                       <v-btn color="blue darken-1" flat @click="dialog = false">Close</v-btn>
-                      <v-btn color="blue darken-1" flat @click="dialog = false">Save</v-btn>
+                      <v-btn color="blue darken-1" flat @click="addProgram()">Save</v-btn>
                     </v-card-actions>
                   </v-card>
                 </v-dialog>
@@ -113,9 +114,10 @@
             allowance: this.allowance
           }
         );
-        this.nameof= '';
+        this.name= '';
         this.application= '';
         this.redirect= '';
+        this.allowance='';
       },
       deletePrograms: function(Programs) {
         Programs.doc(Programs['.key']).delete();
