finally fixed dialog pop up

--- a/refocus.html
+++ b/refocus.html
@@ -240,7 +240,7 @@ var myChart = new Chart(ctx, {
         allowance: '',
         application: '',
         redirect: '',
-        dialog: 'false',
+        dialog: '',
         show: '',
         show2: '',
         show3: '',
